<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Redirecto</string>
    <string name="menu_settings">Nastavenia</string>
    <string name="about">O aplikácii</string>
    <string name="about_text">Diplomová práca na tému \"Mobilné zariadenie ako nástroj pre automatizované presmerovanie VoIP hovorov\"\n\nVlastimil Brečka\nv.brecka@gmail.com\nFEI TUKE, 2014</string>
    <string name="done">HOTOVO</string>
    <string name="app_desc">Automatizovaný interiérový lokalizačný systém s presmerovaním voip hovorov</string>
    <string name="start">ŠTART</string>
    <string name="enter_name">Vložte meno</string>
    <string name="enter_password">Vložte heslo</string>
    <string name="login">PRIHLÁSIŤ SA</string>
    <string name="enter_room_name">Napíšte meno miestnosti…</string>
    <string name="desc">Popis</string>
    <string name="phone_number">Klapka</string>
    <string name="state">Stav</string>
    <string name="working">Pracujem…</string>
    <string name="remove">ODSTRÁNIŤ</string>
    <string name="set_manually">NASTAVIŤ RUČNE</string>
    <string name="add_rooms">Pridať miestnosť</string>
    <string name="unable_to_load_rooms">Nepodarilo sa načítať miestnosti</string>
    <string name="stop">STOP</string>
    <string name="unable_to_export">Nepodarilo sa exportovať</string>
    <string name="export_via">Exportovať cez…</string>
    <string name="gathered_aps_count">"Zozbieraných prístupových bodov : "</string>
    <string name="session_expired">Relácia vypršala, prihláste sa znova</string>
    <string name="enter_name_and_password">Zadajte meno a heslo</string>
    <string name="logging_in">Prihlasujem sa…</string>
    <string name="unable_to_login">Nepodarilo sa prihlásiť</string>
    <string name="check_internet_connection">Skontrolujte pripojenie na internet</string>
    <string name="no_rooms_to_add">Žiadne miestnosti na pridanie</string>
    <string name="unable_to_add_room">Nepodarilo sa pridať miestnosť</string>
    <string name="in_room">"v miestnosti "</string>
    <string name="starting_recording">"Spúšťam meranie v "</string>
    <string name="stopping_recording">"Ukončujem meranie v "</string>
    <string name="fingerprints_sent_successfully">Odtlačky úspešne odoslané</string>
    <string name="unable_to_send_fingerprints">Nepodarilo sa odoslať odtlačky</string>
    <string name="unable_to_get_rooms">Nepodarilo sa prevziať zoznam miestností</string>
    <string name="room_current">Miestnosť aktuálna. Hovory presmerované sem</string>
    <string name="room_not_current">Miestnosť nie je aktuálna</string>
    <string name="unable_to_set_as_current">Nepodarilo sa nastaviť ako aktuálnu</string>
    <string name="unable_to_remove">Nepodarilo sa odstrániť miestnosť</string>
    <string name="logging_out">Odhlasujem sa…</string>
    <string name="localized_in">"Lokalizovaný v "</string>
    <string name="calls_redirected">\nHovory úspešne presmerované</string>
    <string name="unable_to_log_and_fwd">Nepodarilo sa lokalizovať a presmerovať</string>
    <string name="unable_to_logout">Nepodarilo sa odhlásiť</string>
    <string name="unable_to_sync_rooms">Nepodarilo sa synchronizovať miestnosti</string>
    <string name="unable_to_change_coef">Nepodarilo sa zmeniť koeficient</string>
    <string name="recording_fingerprints">Zaznamenávam odtlačky</string>
    <string name="gathering_aps">Zbieram prístupové body</string>
    <string name="add_room">Pridať miestnosť</string>
    <string name="record_fingerprints">Záznam odtlačkov</string>
    <string name="gather_aps">Zber prístupových bodov</string>
    <string name="export">Exportovať</string>
    <string name="clear">Vyčistiť</string>
    <string name="refresh">Obnoviť</string>
    <string name="localize_me">Lokalizuj</string>
    <string name="sync_rooms">Synchronizovať miestnosti</string>
    <string name="logout">Odhlásiť sa</string>
    <string name="auto_loc">Automatická lokalizácia</string>
    <string name="auto_loc_summary">Lokalizovať automaticky na pozadí</string>
    <string name="loc_frequency_summary">Frekvencia lokalizácie</string>
    <string name="loc_frequency">Frekvencia lokalizácie</string>
    <string name="max_coef">Maximálny koeficient</string>
    <string name="max_coef_summary">Maximálny koeficient presnosti lokalizácie. Čím väčší, tým väčšia povolená odchýlka</string>

    <string-array name="frequency_names">
        <item>Každých 15 sekúnd</item>
        <item>Každých 30 sekúnd</item>
        <item>Každú 1 minútu</item>
        <item>Každých 5 minút</item>
        <item>Každých 15 minút</item>
    </string-array>
    <string-array name="frequency_values">
        <item>15000</item>
        <item>30000</item>
        <item>60000</item>
        <item>300000</item>
        <item>900000</item>
    </string-array>

</resources>