<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_localize"
        android:icon="@drawable/ic_action_location_found"
        android:orderInCategory="93"
        android:showAsAction="ifRoom"
        android:title="@string/localize_me"/>
    <item
        android:id="@+id/action_add_room"
        android:orderInCategory="94"
        android:showAsAction="never"
        android:title="@string/add_rooms"/>
    <item
        android:id="@+id/action_sync_rooms"
        android:orderInCategory="95"
        android:showAsAction="never"
        android:title="@string/sync_rooms"/>
    <item
        android:id="@+id/action_record"
        android:orderInCategory="96"
        android:showAsAction="never"
        android:title="@string/record_fingerprints"/>
    <item
        android:id="@+id/action_gather"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/gather_aps"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logout"/>

</menu>