<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/separator"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:padding="12dp" >

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="4dp"
                android:textSize="48sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/desc"
                android:textAllCaps="true"
                android:textColor="@color/accent_green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/phone_number"
                android:textAllCaps="true"
                android:textColor="@color/accent_green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/state"
                android:textAllCaps="true"
                android:textColor="@color/accent_green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator_color" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/separator"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:visibility="gone" >

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/working"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/buttonBar"
        android:background="@color/separator_color" />

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#FFF"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/removeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:drawableTop="@drawable/ic_action_discard_dark"
            android:fontFamily="sans-serif-condensed"
            android:padding="12dp"
            android:text="@string/remove"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/separator_color" />

        <Button
            android:id="@+id/forceButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:drawableTop="@drawable/ic_action_location_found_dark"
            android:fontFamily="sans-serif-condensed"
            android:padding="12dp"
            android:text="@string/set_manually"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>